# docs/swagger.json
@@ -2239,6 +2239,9 @@
         "server.ConfigResponse": {
             "type": "object",
             "properties": {
+                "demo": {
+                    "type": "boolean"
+                },
                 "site_name": {
                     "type": "string"
                 }
@@ -2503,6 +2506,9 @@
                     "type": "string"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 },
                 "visibility": {
